style website header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/default.css">
+</head>
   <body>
-    Hello DBC Dragonflies!
+    <a href="">
+      <div class="nav" id="nav1">blog</div>
+    </a>
+    <a href="">
+      <div class="nav" id="nav2">about me</div>
+    </a>
+    <a href="">
+      <div class="nav" id="nav3">work</div>
+    </a>
+    <a href="">
+      <div class="nav" id="nav4">dbc info</div>
+    </a>
+    <a href="">
+      <div class="nav" id="nav5">contact</div>
+    </a>
+      <div class="bar">Andrelton</div>
+    <div class="footer"></div>
   </body>
 </html>
