added footer, var fixes, notes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
       <div class="nav" id="nav5">contact</div>
     </a>
       <div class="bar">Andrelton</div>
-    <div class="footer"></div>
+    <div id="footer">This was made by a boy called Eric Saxman. He thought the name "Andrelton" was fun. &copy; 2015.</div>
   </body>
 </html>
