change link colors

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div class="nav" id="nav5">contact</div>
     </a>
 
-   <div class="bar"><a href="http://andrelton.github.io">Andrelton<br><div id="small">.github.io</div></a></div>
+   <div class="bar graphic"><a href="http://andrelton.github.io">Andrelton<br><div id="small">.github.io</div></a></div>
 
-    <div class="twitter"><p><a href="https://twitter.com/ericsaxman">tweet to<br>@ericsaxman</p>
+    <div class="twitter graphic" class="graphic"><p><a href="https://twitter.com/ericsaxman">tweet to<br>@ericsaxman</p>
       <p><a href="http://www.reciperoulette.tv">find a<br>random recipe</a></p></div>
 
-    <div id="main">
+    <div class="main">
       <h1>HELLO WORLD!</h1>
       <p>I'm not sure what to do with this bit yet.</p>
-      <p>So for now, here's the first section of Lewis Carroll's <a href="https://www.gutenberg.org/files/11/11-h/11-h.htm"><em>Alice in Wonderland</em></p>
+      <p>So for now, here's the first section of Lewis Carroll's <a href="https://www.gutenberg.org/files/11/11-h/11-h.htm"><em>Alice in Wonderland.</a></em></p>
       <h3>CHAPTER I. Down the Rabbit-Hole</h3>
 
         <p>
