sidebar formatting changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/default.css">
 </head>
   <body>
-    <a href="http://andrelton.github.io/blog">
+    <a href="">
       <div class="nav" id="nav1">blog</div>
     </a>
     <a href="">
@@ -22,8 +22,20 @@
 
    <div class="bar"><a href="http://andrelton.github.io">Andrelton<br><div id="small">.github.io</div></a></div>
 
-    <div class="twitter"><p><a href="https://twitter.com/ericsaxman">tweet to<br>@ericsaxman</p>
-      <p><a href="http://www.reciperoulette.tv">find a<br>random recipe</a></p></div>
+    <div class="twitter">
+    <p><a href="https://twitter.com/ericsaxman">tweet to<br>@ericsaxman</p>
+    <p><a href="http://www.reciperoulette.tv">find a<br>random recipe</a></p>
+      <p><strong>blog posts</strong></p>
+      <p>technical blog:</p>
+      <ul>
+        <li class ="blog"><a href="http://andrelton.github.io/blog/#">WK 2: HTML/CSS/SOS</a></li>
+        <li class ="blog"><a href="http://andrelton.github.io/blog/t1-git-blog.html">WK 1: Git by Fire</a></li>
+      </ul>
+      <p>cultural blog:</p>
+      <ul>
+        <li class="blog"><a href="http://andrelton.github.io/blog/c1-chefs-kitchen.html">WK 1: Chef's Kitchen</a></li>
+      </ul>
+    </div>
 
     <div class="main">
       <h1>HELLO WORLD!</h1>
