--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/default.css">
 </head>
   <body>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav1">blog</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav2">about me</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav3">work</div>
     </a>
     <a href="http://devbootcamp.com/">
       <div class="nav" id="nav4">dbc info</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav5">contact</div>
     </a>
 
