--- a/index.html
+++ b/index.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/default.css">
-</head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="template-style.css">
+    <title>Practice</title>
+  </head>
   <body>
-    <a href="http://andrelton.github.io/construction.html">
+
+<!-- Title -->
+    <div id="title">Andrelton<br><span>.github.io</span></div>
+
+<!-- Nav-Bar -->
+    <a href="">
       <div class="nav" id="nav1">blog</div>
     </a>
-    <a href="http://andrelton.github.io/construction.html">
+    <a href="">
       <div class="nav" id="nav2">about me</div>
     </a>
-    <a href="http://andrelton.github.io/construction.html">
-      <div class="nav" id="nav3">work</div>
+    <a href="">
+      <div class="nav" id="nav3">my work</div>
     </a>
-    <a href="http://devbootcamp.com/">
-      <div class="nav" id="nav4">dbc info</div>
-    </a>
-    <a href="http://andrelton.github.io/construction.html">
-      <div class="nav" id="nav5">contact</div>
+    <a href="">
+      <div class="nav" id="nav4">contact</div>
     </a>
 
-   <div class="bar"><a href="http://andrelton.github.io">Andrelton<br><div id="small">.github.io</div></a></div>
-
-    <div class="twitter">
-    <p><a href="https://twitter.com/ericsaxman">tweet to<br>@ericsaxman</p>
-    <p><a href="http://www.reciperoulette.tv">find a<br>random recipe</a></p>
-      <p><strong>blog posts</strong></p>
-      <p>technical blog:</p>
-      <ul>
-        <li class ="blog"><a href="http://andrelton.github.io/blog/#">WK 2: HTML/CSS/SOS</a></li>
-        <li class ="blog"><a href="http://andrelton.github.io/blog/t1-git-blog.html">WK 1: Git by Fire</a></li>
-      </ul>
-      <p>cultural blog:</p>
-      <ul>
-        <li class="blog"><a href="http://andrelton.github.io/blog/c1-chefs-kitchen.html">WK 1: Chef's Kitchen</a></li>
-      </ul>
-    </div>
-
-    <div class="main">
-      <h1>HELLO WORLD!</h1>
+<!-- Main Content -->
+    <div id="main">
+      <h3>HELLO WORLD!</h3>
       <p>I'm not sure what to do with this bit yet.</p>
       <p>So for now, here's the first section of Lewis Carroll's <a href="https://www.gutenberg.org/files/11/11-h/11-h.htm"><em>Alice in Wonderland.</a></em></p>
       <h3>CHAPTER I. Down the Rabbit-Hole</h3>
@@ -57,6 +44,26 @@
         </p>
     </div>
 
-    <div id="footer">Created by Eric Saxman. He thought the name "Andrelton" was fun. &copy; 2015.</div>
+<!-- Sidebar -->
+    <div id="side"><strong>links for pleasure</strong>
+      <br>
+      <br><a href="http://twitter.com/ericsaxman">tweet me
+      <br>@ericsaxman</a>
+      <br>
+      <br>blog :
+      <br>
+      <br><a href="http://andrelton.github.io/blog/#">HTML/CSS/SOS</a>
+      <br><a href="http://andrelton.github.io/blog/t1-git-blog.html">Git by Fire</a>
+      <br><a href="http://andrelton.github.io/blog/c1-chefs-kitchen.html">Chef's Kitchen</a>
+      <br>
+      <br><a href="http://devbootcamp.com">dev bootcamp info</a>
+      <br>
+      <br><a href="http://www.reciperoulette.tv">find a
+      <br>random recipe</a>
+      <br>
+    </div>
+
+<!-- Footer -->
+    <div id="footer">Created by Eric Saxman. He thought "Andrelton" was more fun. &copy; 2015.</div>
   </body>
 </html>
