--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="template-style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
     <title>Practice</title>
   </head>
   <body>
