--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
-    <title>Practice</title>
+    <title>Andrelton Invents "Blog"</title>
   </head>
   <body>
 
@@ -10,16 +10,16 @@
     <div id="title">Andrelton<br><span>.github.io</span></div>
 
 <!-- Nav-Bar -->
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav1">blog</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav2">about me</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav3">my work</div>
     </a>
-    <a href="">
+    <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav4">contact</div>
     </a>
 
