--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="title">Andrelton<br><span>.github.io</span></div>
 
 <!-- Nav-Bar -->
-    <a href="http://andrelton.github.io/construction.html">
+    <a href="http://andrelton.github.com/blog">
       <div class="nav" id="nav1">blog</div>
     </a>
     <a href="http://andrelton.github.io/construction.html">
@@ -50,16 +50,12 @@
       <br><a href="http://twitter.com/ericsaxman">tweet me
       <br>@ericsaxman</a>
       <br>
-      <br>blog :
-      <br>
-      <br><a href="http://andrelton.github.io/blog/#">HTML/CSS/SOS</a>
-      <br><a href="http://andrelton.github.io/blog/t1-git-blog.html">Git by Fire</a>
-      <br><a href="http://andrelton.github.io/blog/c1-chefs-kitchen.html">Chef's Kitchen</a>
-      <br>
       <br><a href="http://devbootcamp.com">dev bootcamp info</a>
       <br>
       <br><a href="http://www.reciperoulette.tv">find a
       <br>random recipe</a>
+      <br>
+      <br><a href="http://andrelton.github.com/blog"><strong>read my blog</strong>
       <br>
     </div>
 
