--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="title">Andrelton<br><span>.github.io</span></div>
 
 <!-- Nav-Bar -->
-    <a href="http://andrelton.github.com/blog">
+    <a href="http://andrelton.github.io/blog">
       <div class="nav" id="nav1">blog</div>
     </a>
     <a href="http://andrelton.github.io/construction.html">
@@ -55,7 +55,7 @@
       <br><a href="http://www.reciperoulette.tv">find a
       <br>random recipe</a>
       <br>
-      <br><a href="http://andrelton.github.com/blog"><strong>read my blog</strong>
+      <br><a href="http://andrelton.github.io/blog"><strong>read my blog</strong>
       <br>
     </div>
 
