added images, edited all blogs

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <br><a href="http://www.reciperoulette.tv">find a
       <br>random recipe</a>
       <br>
+      <br><a href="http://classics.mit.edu/Antoninus/meditations.1.one.html">the only book
+      <br>you need</a>
+      <br>
       <br><a href="http://andrelton.github.io/blog"><strong>read my blog</strong>
       <br>
     </div>
