--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
 
 <!-- Sidebar -->
-    <div id="side"><strong>links for pleasure</strong>
+    <div id="side"> <img src="imgs/thumbups.jpg">
+      <br><strong>links for pleasure</strong>
       <br>
       <br><a href="http://twitter.com/ericsaxman">tweet me
       <br>@ericsaxman</a>
@@ -58,7 +59,7 @@
       <br><a href="http://classics.mit.edu/Antoninus/meditations.1.one.html">the only book
       <br>you need</a>
       <br>
-      <br><a href="http://andrelton.github.io/blog"><strong>read my blog</strong>
+      <br><a href="http://andrelton.github.io/blog"><strong> read my blog</strong>
       <br>
     </div>
 
