--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
 
 <!-- Sidebar -->
-    <div id="side"> <img src="imgs/thumbups.jpg">
-      <br><strong>links for pleasure</strong>
+    <div id="side"> <img src="imgs/megalaxy.png">
+      <br><strong>quick links:</strong>
       <br>
       <br><a href="http://twitter.com/ericsaxman">tweet me
       <br>@ericsaxman</a>
