--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
-    <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+    <meta charset="UTF-8">
     <title>Andrelton Invents "Blog"</title>
+    <link rel="stylesheet" href="stylesheets/default.css">
+
   </head>
   <body>
 
 <!-- Title -->
-    <div id="title">Andrelton<br><span>.github.io</span></div>
+    <div id="title"><img src="imgs/oakland.jpg" />
+      <div id="words">Andrelton<br><span>.github.io</span></div>
+    </div>
 
 <!-- Nav-Bar -->
     <a href="http://andrelton.github.io/blog">
