fix header img file path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
 <!-- Title -->
-    <div id="title"><img src="imgs/oakland.jpg" />
+    <div id="title"><img src="imgs/oaklandy.jpg" />
       <div id="words">Andrelton<br><span>.github.io</span></div>
     </div>
 
