--- a/index.html
+++ b/index.html
@@ -29,23 +29,30 @@
 
 <!-- Main Content -->
     <div id="main">
-      <h3>HELLO WORLD!</h3>
-      <p>I'm not sure what to do with this bit yet.</p>
-      <p>So for now, here's the first section of Lewis Carroll's <a href="https://www.gutenberg.org/files/11/11-h/11-h.htm"><em>Alice in Wonderland.</a></em></p>
-      <h3>CHAPTER I. Down the Rabbit-Hole</h3>
+      <p>
+        <strong>Agh! I wish my Mom hadn’t shared this URL with you.</strong>
+      </p>
 
-        <p>
-          Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do: once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it, 'and what is the use of a book,' thought Alice 'without pictures or conversations?'
-        </p>
-        <p>
-          So she was considering in her own mind (as well as she could, for the hot day made her feel very sleepy and stupid), whether the pleasure of making a daisy-chain would be worth the trouble of getting up and picking the daisies, when suddenly a White Rabbit with pink eyes ran close by her.
-        </p>
-        <p>
-          There was nothing so very remarkable in that; nor did Alice think it so very much out of the way to hear the Rabbit say to itself, 'Oh dear! Oh dear! I shall be late!' (when she thought it over afterwards, it occurred to her that she ought to have wondered at this, but at the time it all seemed quite natural); but when the Rabbit actually took a watch out of its waistcoat-pocket, and looked at it, and then hurried on, Alice started to her feet, for it flashed across her mind that she had never before seen a rabbit with either a waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she ran across the field after it, and fortunately was just in time to see it pop down a large rabbit-hole under the hedge.
-        </p>
-        <p>
-          In another moment down went Alice after it, never once considering how in the world she was to get out again.
-        </p>
+      <p>
+      You’ve arrived at one of the most dated-looking pages now on the internet. How do you like my sidebar? This site would look a lot more attractive if it were simply a giant image of me skydiving, overlayed with the words…
+      </p>
+
+      </p><span id="faux">
+      Hi. I’m Eric.
+      <br>I’ll change your life dramatically.
+      </span></p>
+
+      <p>
+      Someday I might have a site like that. But today, I’ve got a few other things to focus on before I turn pro. Until then, does it look any better if I call it “lite,” or “beta”?
+      </p>
+
+      <p>
+      Feel free to check out any of the links you find on the right. Some of them... might not lead to anything yet. Those that do will take you to pages that look even worse than this.
+      </p>
+
+      <p>
+      While you wait for my final version, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and sorted by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
+      </p>
     </div>
 
 <!-- Sidebar -->
