--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </p>
 
       <p>
-      You’ve arrived at one of the most dated-looking pages now on the internet. How do you like my sidebar? This site would look a lot more attractive if it were simply a giant image of me skydiving, overlayed with the words…
+      You’ve arrived at one of the most dated-looking pages now on the internet (how do you like my sidebar?). This site would look a lot more attractive if it were simply a giant image of me skydiving, overlayed with the words:
       </p>
 
       </p><span id="faux">
@@ -51,7 +51,7 @@
       </p>
 
       <p>
-      While you wait for my final version, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and sorted by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
+      While you wait for my final version, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
       </p>
     </div>
 
