change sidebar photo

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </div>
 
 <!-- Sidebar -->
-    <div id="side"> <img src="imgs/megalaxy.png">
-      <br><strong>quick links:</strong>
+    <div class="side" id="avatar"><img src="imgs/megalaxy.png" /></div>
+    <div class="side"><strong>quick links:</strong>
       <br>
       <br><a href="http://twitter.com/ericsaxman">tweet me
       <br>@ericsaxman</a>
