--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Andrelton Invents "Blog"</title>
-    <link rel="stylesheet" href="stylesheets/bonkers.css">
+    <link rel="stylesheet" href="stylesheets/default.css">
 
   </head>
   <body>
@@ -11,7 +11,7 @@
 <!-- Title -->
 <div id="top">
 <div id="title"><img src="imgs/oaklandy.jpg" />
-      <div id="words"><br>welcome<br>to Andrelton<br><span>.github.com</span></div>
+      <div id="words"><br>welcome<br>home.<!-- <br>to Andrelton<br><span>.github.com</span> --></div>
 </div>
 
 <!-- Nav-Bar -->
