--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Title -->
 <div id="top">
 <div id="title"><img src="imgs/oaklandy.jpg" />
-      <div id="words"><br>welcome<br>home.<!-- <br>to Andrelton<br><span>.github.com</span> --></div>
+      <div id="words"><br>Andrelton.<!-- <br>to Andrelton<br><span>.github.com</span> --></div>
 </div>
 
 <!-- Nav-Bar -->
