change main content

--- a/index.html
+++ b/index.html
@@ -32,29 +32,25 @@
 
 <!-- Main Content -->
     <div id="main">
-      <p>
-        <strong>Agh! I wish my Mom hadn’t shared this URL with you.</strong>
-      </p>
-
-      <p>
-      You’ve arrived at one of the most dated-looking pages now on the internet (how do you like my sidebar?). This site would look a lot more attractive if it were simply a giant image of me skydiving, overlayed with the words:
-      </p>
-
       </p><span id="faux">
       Hi. I’m Eric.
       <br>I’ll change your life dramatically.
       </span></p>
 
       <p>
-      Someday I might have a site like that. But today, I’ve got a few other things to focus on before I turn pro. Until then, does it look any better if I call it “lite,” or “beta”?
+      <strong>Agh! I wish my Mom hadn’t shared this URL with you.</strong>
+      </p>
+
+     <p>
+      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There's also some links on the right. Some of them... might not lead to anything yet. Those that do might take you to pages that look worse than this.
       </p>
 
       <p>
-      Feel free to check out any of the links you find on the right. Some of them... might not lead to anything yet. Those that do will take you to pages that look even worse than this.
+      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
       </p>
 
       <p>
-      While you wait for my final version, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
+      See you soon!
       </p>
     </div>
 
