reduce photo file size

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <!-- Title -->
 <div id="top">
-<div id="title"><img src="imgs/oaklandy.jpg" />
-      <div id="words"><br>Andrelton.<!-- <br>to Andrelton<br><span>.github.com</span> --></div>
+<div id="title"><img src="imgs/oaklander.jpg" />
+      <div id="words"><br>/Andrelton &nbsp;$ &nbsp;<span>&#9632;</span><br>Welcome.</div>
 </div>
 
 <!-- Nav-Bar -->
@@ -27,7 +27,7 @@
     <a href="http://andrelton.github.io/construction.html">
       <div class="nav" id="nav4">contact</div>
     </a>
-        <div class="side" id="avatar"><img src="imgs/megalaxy.png" /></div>
+        <div class="side" id="avatar"><img src="imgs/megalaxy.jpg" /></div>
   </div>
 
 <!-- Main Content -->
@@ -46,7 +46,7 @@
       </p>
 
       <p>
-      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on <em>all</em> the resources in the library can be found inside a physical box. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
+      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on all the books in a library can be found inside a <em>physical box</em>. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
       </p>
 
       <p>
