--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
       </p>
 
       <p>
-      See you soon!
+      See you soon!<br><img id="signature" src="imgs/signature.jpg" />
       </p>
+
+
+
     </div>
 
 <!-- Sidebar -->
