change blog index

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <a href="http://andrelton.github.io/blog">
       <div class="nav" id="nav1">blog</div>
     </a>
-    <a href="http://andrelton.github.io/construction.html">
+    <a href="http://andrelton.github.io/blog">
       <div class="nav" id="nav2">about me</div>
     </a>
-    <a href="http://andrelton.github.io/construction.html">
+    <a href="construction.html">
       <div class="nav" id="nav3">my work</div>
     </a>
-    <a href="http://andrelton.github.io/construction.html">
+    <a href="http://andrelton.github.io/blog">
       <div class="nav" id="nav4">contact</div>
     </a>
         <div class="side" id="avatar"><img src="imgs/megalaxy.jpg" /></div>
@@ -41,8 +41,8 @@
       <strong>Agh! I wish my Mom hadn’t shared this URL with you.</strong>
       </p>
 
-     <p>
-      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There's also some links on the right. Some of them... might not lead to anything yet. Those that do might take you to pages that look worse than this.
+      <p>
+      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There are also some links off to the right there. The pages relating to me are almost equally as equally useful as this one.
       </p>
 
       <p>
@@ -52,9 +52,6 @@
       <p>
       See you soon!<br><img id="signature" src="imgs/signature.jpg" />
       </p>
-
-
-
     </div>
 
 <!-- Sidebar -->
