--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       </p>
 
       <p>
-      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There are also some links off to the right there. The pages relating to me are almost equally as equally useful as this one.
+      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There are also some links off to the right there. The pages relating to me are almost equally as useful as this one.
       </p>
 
       <p>
-      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on all the books in a library can be found inside a <em>physical box</em>. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
+      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on all the books in a library near you can be found inside a <em>physical box</em>. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, paper will be king.
       </p>
 
       <p>
