--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <br>
       <br><a href="http://devbootcamp.com">dev bootcamp info</a>
       <br>
-      <br><a href="http://www.reciperoulette.tv">find a
-      <br>random recipe</a>
+      <br><a href="http://andrelton.github.io/blog/cheat-sheet.html"">ruby enum
+      <br>cheat sheet</a>
       <br>
       <br><a href="http://classics.mit.edu/Antoninus/meditations.1.one.html">the only book
       <br>you need</a>
