add new directory for mini source island posts

--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
       </p>
 
       <p>
-      I won't change your life dramatically. I'm a nobody. You just have to say stuff like that these days. But if you check out the CSS for this page, you can learn about floats, and clears, and text decoration, just like I did. There are also some links off to the right there. The pages relating to me are almost equally as useful as this one.
+      I won't change your life dramatically. You just have to say stuff like that these days. But if you check out some of the links here, you can see some of the early HTML and CSS I worked on (three weeks after I googled 'HTML'...). It might be a bit clunky, but for now this is a fast way to host basic personal content.
       </p>
 
       <p>
-      While you wait for my final version of this site, check out a <a href="http://en.wikipedia.org/wiki/Library_catalog">project</a> I’ve been working on, a system where information on all the books in a library near you can be found inside a <em>physical box</em>. Each resource is described on a small piece of paper, and indexed by a uniform numbering system. I’m hoping the Bay Area is the perfect place for this to take off. Because when the internet fad dies down, I'm sure paper will be king.
-      </p>
-
-      <p>
-      See you soon!<br><img id="signature" src="imgs/signature.jpg" />
+      Thanks!<br><img id="signature" src="imgs/signature.jpg" />
       </p>
     </div>
 
@@ -61,9 +57,6 @@
       <br>@ericsaxman</a>
       <br>
       <br><a href="http://devbootcamp.com">dev bootcamp info</a>
-      <br>
-      <br><a href="http://andrelton.github.io/blog/cheat-sheet.html"">ruby enum
-      <br>cheat sheet</a>
       <br>
       <br><a href="http://classics.mit.edu/Antoninus/meditations.1.one.html">the only book
       <br>you need</a>
