finish new blog entry

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </div>
 
 <!-- Nav-Bar -->
-    <a href="http://andrelton.github.io/blog">
+    <a href="blog">
       <div class="nav" id="nav1">blog</div>
     </a>
-    <a href="http://andrelton.github.io/blog">
-      <div class="nav" id="nav2">about me</div>
+    <a href="island">
+      <div class="nav" id="nav2">island</div>
     </a>
-    <a href="construction.html">
+    <a href="https://github.com/Andrelton">
       <div class="nav" id="nav3">my work</div>
     </a>
     <a href="http://andrelton.github.io/blog">
@@ -61,7 +61,7 @@
       <br><a href="http://classics.mit.edu/Antoninus/meditations.1.one.html">the only book
       <br>you need</a>
       <br>
-      <br><a href="http://andrelton.github.io/blog"><strong> read my blog</strong>
+      <br><a href="island"><strong>mini-source island</strong>
       <br>
     </div>
 
