make preliminary progress on jquery post

--- a/island/index.html
+++ b/island/index.html
@@ -31,11 +31,20 @@
     <div class="row">
       <div class="note">
         <p>
-          Rails method explanations:
+          Rails function explanations:
         </p>
         <ul>
           <li>
             <a href="rails_link_to.html">link_to</a>
+          </li>
+        </ul>
+
+        <p>
+          React.js function explanations:
+        </p>
+        <ul>
+          <li>
+            <a href="react_js.html">setState</a>
           </li>
         </ul>
       </div>
@@ -53,7 +62,7 @@
         </p>
 
         <p>
-          Since I was doing the source code exploration anyway, I figured I'd share what I found. Sometimes the descriptions are abbreviated; I don't dig much deeper than what an intermediate-level developer would find interesting. The goal is to make the 'automagical' code feel a little less like a black box, and to highlight what incredible tools the open-source community has built.
+          Since I was doing the source code exploration anyway, I figured I'd share what I found. Sometimes the descriptions are abbreviated; I don't dig much deeper than what an intermediate-level developer might find interesting. The goal is to make the 'automagical' code feel a little less like a black box, and to highlight what incredible tools the open-source community has built.
         </p>
 
         <p>
