finish jquery post

--- a/island/index.html
+++ b/island/index.html
@@ -31,6 +31,11 @@
     <div class="row">
       <div class="note">
         <p>
+          <em>
+            Eric Saxman | 'Andrelton' - 2015.<br>Find me on <a href="https://github.com/Andrelton">GitHub</a> | <a href="https://www.linkedin.com/in/ericsaxman">LinkedIn</a>.
+          </em>
+        </p>
+        <p>
           Rails function explanations:
         </p>
         <ul>
@@ -40,11 +45,20 @@
         </ul>
 
         <p>
+          jQuery function explanations:
+        </p>
+        <ul>
+          <li>
+            <a href="jquery_text.html">.text()</a>
+          </li>
+        </ul>
+
+        <p>
           React.js function explanations:
         </p>
         <ul>
           <li>
-            <a href="react_js.html">setState</a>
+            <a href="react_setstate.html">setState</a>
           </li>
         </ul>
       </div>
