--- a/island/rails_render.html
+++ b/island/rails_render.html
@@ -23,7 +23,7 @@
       <div class="article-title">
         <h1 class="ta-c fz-xl fc-white outline mg-no lh-touch"><br>
           <!-- <span class="logo">-f- </span> -->
-          *grab bag* [jQuery]
+          render [Rails]
         </h1>
       </div>
     </div>
@@ -33,6 +33,11 @@
         <p>
           <em>
             Let's take a look at a straightforward jQuery method, <strong>.text().</strong>
+          </em>
+        </p>
+        <p class="ta-c">
+          <em>
+            Eric Saxman | 'Andrelton' - 2015.<br>Find me on <a href="https://github.com/Andrelton">GitHub</a> | <a href="https://www.linkedin.com/in/ericsaxman">LinkedIn</a>.
           </em>
         </p>
       </div>
@@ -65,11 +70,11 @@ Example:
     <div class="row">
       <div class="note">
         <p>
-          If called with no arguments, as above, <strong>.text()</strong> simply returns the text of the element. To do this, it uses the .text() method on the local copy of jQuery, which references Sizzle's <strong>.getText()</strong>.
+          If called with no arguments, as above, <strong>.text()</strong> simply returns the text of each element. To do this, it uses the .text() method on the local copy of jQuery, which references Sizzle's <strong>.getText()</strong>.
         </p>
 
         <p>
-          If a new text string is provided, it sets the <strong>textContent</strong> of the node to that string.
+          If a new text string is provided, it sets the <strong>textContent</strong> of each node to that string.
         </p>
       </div>
       <div class="code">
