--- a/island/react_setstate.html
+++ b/island/react_setstate.html
@@ -35,6 +35,11 @@
             Let's explore a simple, perhaps contrived example of a change to a React component with <strong>setState</strong>, changing a boolean to reflect the display of a form.
           </em>
         </p>
+        <p class="ta-c">
+          <em>
+            Eric Saxman | 'Andrelton' - 2015.<br>Find me on <a href="https://github.com/Andrelton">GitHub</a> | <a href="https://www.linkedin.com/in/ericsaxman">LinkedIn</a>.
+          </em>
+        </p>
       </div>
       <div class="code">
       <pre>
