--- a/island/jquery_text.html
+++ b/island/jquery_text.html
@@ -11,11 +11,13 @@
   <div class="container">
     <div class="row">
       <div class="page-title">
-        <h1 class="fz-xl fc-white outline mg-no lh-touch">
-          Mini-<br>
-          Source<br>
-          Island
-        </h1>
+        <a href="index.html">
+          <h1 class="fz-xl fc-white outline mg-no lh-touch">
+            Mini-<br>
+            Source<br>
+            Island
+          </h1>
+        </a>
         <p class="fc-white bc-black subtext">
           A source-code getaway.
         </p>
